--- a/tsConfigJsonFile/package.json
+++ b/tsConfigJsonFile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tsconfigjsonfile",
+  "name": "tonfilsconfigjse",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/lodash": "^4.14.149"
+    "@types/lodash": "^4.14.149",
+    "@types/node": "^13.1.1"
   },
   "dependencies": {
     "lodash": "^4.17.15"
